--- a/invoker-project/pom.xml
+++ b/invoker-project/pom.xml
@@ -181,7 +181,7 @@
 			<!-- projects -->
 			<dependency>
 				<groupId>${project.groupId}</groupId>
-				<artifactId>api</artifactId>
+				<artifactId>invoker-api</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
