--- a/invoker-webservice/pom.xml
+++ b/invoker-webservice/pom.xml
@@ -119,10 +119,10 @@
 					<configuration>
 						<scanIntervalSeconds>10</scanIntervalSeconds>
 						<connectors>
-							<!-- <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector"> -->
-							<!-- <port>8080</port> -->
-							<!-- <maxIdleTime>60000</maxIdleTime> -->
-							<!-- </connector> -->
+							<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+							        <port>9090</port>
+							        <maxIdleTime>60000</maxIdleTime>
+							</connector>
 						</connectors>
 					</configuration>
 				</plugin>
