--- a/invoker-grounding/pom.xml
+++ b/invoker-grounding/pom.xml
@@ -19,7 +19,12 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
+	
 	<dependencies>
+		<dependency>
+			<groupId>at.sti2.ngsee</groupId>
+			<artifactId>invoker-api</artifactId>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 </project>
