Implemented lower method for XSLTGroundingEngine for XSLT2.0 transformations

--- a/invoker-grounding/pom.xml
+++ b/invoker-grounding/pom.xml
@@ -19,12 +19,20 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>at.sti2.ngsee</groupId>
 			<artifactId>invoker-api</artifactId>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.saxon</groupId>
+			<artifactId>saxon</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.saxon</groupId>
+			<artifactId>saxon-dom</artifactId>
 		</dependency>
 	</dependencies>
 </project>
