--- a/invoker-framework/pom.xml
+++ b/invoker-framework/pom.xml
@@ -25,6 +25,44 @@
 			<groupId>at.sti2.ngsee</groupId>
 			<artifactId>invoker-api</artifactId>
 			<scope>compile</scope>
-		</dependency>
+                </dependency>
+                <dependency>
+                        <groupId>org.apache.axis2</groupId>
+                        <artifactId>axis2-kernel</artifactId>
+                        <version>1.5.4</version>
+                        <exclusions>
+                                <exclusion>
+                                        <groupId>javax.activation</groupId>
+                                        <artifactId>activation</artifactId>
+                                </exclusion>
+                        </exclusions>
+                </dependency>
+                <dependency>
+                        <groupId>org.apache.axis2</groupId>
+                        <artifactId>axis2-transport-local</artifactId>
+                        <version>1.5.4</version>
+                        <exclusions>
+                                <exclusion>
+                                        <groupId>javax.activation</groupId>
+                                        <artifactId>activation</artifactId>
+                                </exclusion>
+                        </exclusions>
+                </dependency>
+                <dependency>
+                        <groupId>org.apache.axis2</groupId>
+                        <artifactId>axis2-transport-http</artifactId>
+                        <version>1.5.4</version>
+                        <exclusions>
+                                <exclusion>
+                                        <groupId>javax.activation</groupId>
+                                        <artifactId>activation</artifactId>
+                                </exclusion>
+                        </exclusions>
+                </dependency>
+                <dependency>
+                        <groupId>dom4j</groupId>
+                        <artifactId>dom4j</artifactId>
+                        <version>1.6.1</version>
+                </dependency>
         </dependencies>
 </project>
