--- a/invoker-webservice/pom.xml
+++ b/invoker-webservice/pom.xml
@@ -37,120 +37,144 @@
 			</plugin>
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>maven-jetty-plugin</artifactId>
-			</plugin>
-		</plugins>
+                                <artifactId>maven-jetty-plugin</artifactId>
+                        </plugin>
+                </plugins>
 
-		<pluginManagement>
-			<plugins>
-				<plugin><!--use mvn tomcat:deploy or mvn tomcat:undeploy -->
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>tomcat-maven-plugin</artifactId>
-					<version>1.0-beta-1</version>
-					<configuration>
-						<server>myTomcat</server>
-						<path>/${project.build.finalName}</path>
-						<!--url>Place URL if different from http://localhost:8080/manager</url -->
-					</configuration>
-				</plugin>
+                <pluginManagement>
+                        <plugins>
+                                <plugin><!--use mvn tomcat:deploy or mvn tomcat:undeploy -->
+                                        <groupId>org.codehaus.mojo</groupId>
+                                        <artifactId>tomcat-maven-plugin</artifactId>
+                                        <version>1.0-beta-1</version>
+                                        <configuration>
+                                                <server>myTomcat</server>
+                                                <path>/${project.build.finalName}</path>
+                                                <!--url>Place URL if different from http://localhost:8080/manager</url -->
+                                </configuration>
+                        </plugin>
 
-				<!-- Below plugin provides a separate JAR for the JAX-WS artifacts (i.e., 
-					the Java classes created by running wsdl2java or wsimport), as this JAR will 
-					also be used by the SOAP client. -->
-				<plugin>
-					<artifactId>maven-assembly-plugin</artifactId>
-					<version>2.2-beta-1</version>
-					<configuration>
-						<descriptors>
-							<descriptor>src/assembly/jaxws-jar.xml</descriptor>
-						</descriptors>
-						<appendAssemblyId>true</appendAssemblyId>
-						<attach>true</attach>
-					</configuration>
-					<executions>
-						<execution>
-							<id>make-assembly</id>
-							<phase>package</phase>
-							<goals>
-								<goal>single</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
+                        <!-- Below plugin provides a separate JAR for the JAX-WS artifacts (i.e., 
+                                        the Java classes created by running wsdl2java or wsimport), as this JAR will 
+                                        also be used by the SOAP client. -->
+                                <plugin>
+                                        <artifactId>maven-assembly-plugin</artifactId>
+                                        <version>2.2-beta-1</version>
+                                        <configuration>
+                                                <descriptors>
+                                                        <descriptor>src/assembly/jaxws-jar.xml</descriptor>
+                                                </descriptors>
+                                                <appendAssemblyId>true</appendAssemblyId>
+                                                <attach>true</attach>
+                                        </configuration>
+                                        <executions>
+                                                <execution>
+                                                        <id>make-assembly</id>
+                                                        <phase>package</phase>
+                                                        <goals>
+                                                                <goal>single</goal>
+                                                        </goals>
+                                                </execution>
+                                        </executions>
+                                </plugin>
 
-				<plugin>
-					<groupId>org.apache.cxf</groupId>
-					<artifactId>cxf-java2ws-plugin</artifactId>
-					<version>${cxf.version}</version>
-					<dependencies>
-						<dependency>
-							<groupId>org.apache.cxf</groupId>
-							<artifactId>cxf-rt-frontend-jaxws</artifactId>
-							<version>${cxf.version}</version>
-						</dependency>
-						<dependency>
-							<groupId>org.apache.cxf</groupId>
-							<artifactId>cxf-rt-frontend-simple</artifactId>
-							<version>${cxf.version}</version>
-						</dependency>
-					</dependencies>
-					<executions>
-						<execution>
-							<id>process-classes</id>
-							<phase>process-classes</phase>
-							<configuration>
-								<className>at.sti2.ngsee.invoker_webservice.InvokerWebService</className>
-								<!-- <genServer>true</genServer> -->
-								<genWsdl>true</genWsdl>
-								<verbose>true</verbose>
-								<!-- <argline>-s ${project.build.directory}/generated-sources/</argline> -->
-							</configuration>
-							<goals>
-								<goal>java2ws</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
+                                <plugin>
+                                        <groupId>org.apache.cxf</groupId>
+                                        <artifactId>cxf-java2ws-plugin</artifactId>
+                                        <version>${cxf.version}</version>
+                                        <dependencies>
+                                                <dependency>
+                                                        <groupId>org.apache.cxf</groupId>
+                                                        <artifactId>cxf-rt-frontend-jaxws</artifactId>
+                                                        <version>${cxf.version}</version>
+                                                        <exclusions>
+                                                                <exclusion>
+                                                                        <groupId>javax.activation</groupId>
+                                                                        <artifactId>activation</artifactId>
+                                                                </exclusion>
+                                                        </exclusions>
+                                                </dependency>
+                                                <dependency>
+                                                        <groupId>org.apache.cxf</groupId>
+                                                        <artifactId>cxf-rt-frontend-simple</artifactId>
+                                                        <version>${cxf.version}</version>
+                                                        <exclusions>
+                                                                <exclusion>
+                                                                        <groupId>javax.activation</groupId>
+                                                                        <artifactId>activation</artifactId>
+                                                                </exclusion>
+                                                        </exclusions>
+                                                </dependency>
+                                        </dependencies>
+                                        <executions>
+                                                <execution>
+                                                        <id>process-classes</id>
+                                                        <phase>process-classes</phase>
+                                                        <configuration>
+                                                                <className>at.sti2.ngsee.invoker_webservice.InvokerWebService</className>
+                                                                <!-- <genServer>true</genServer> -->
+                                                                <genWsdl>true</genWsdl>
+                                                                <verbose>true</verbose>
+                                                                <!-- <argline>-s ${project.build.directory}/generated-sources/</argline> -->
+                                                        </configuration>
+                                                        <goals>
+                                                                <goal>java2ws</goal>
+                                                        </goals>
+                                                </execution>
+                                        </executions>
+                                </plugin>
 
-				<plugin>
-					<groupId>org.mortbay.jetty</groupId>
-					<artifactId>maven-jetty-plugin</artifactId>
-					<version>6.1.10</version>
-					<configuration>
-						<scanIntervalSeconds>10</scanIntervalSeconds>
-						<connectors>
-							<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-							        <port>9090</port>
-							        <maxIdleTime>60000</maxIdleTime>
-							</connector>
-						</connectors>
-					</configuration>
-				</plugin>
+                                <plugin>
+                                        <groupId>org.mortbay.jetty</groupId>
+                                        <artifactId>maven-jetty-plugin</artifactId>
+                                        <version>6.1.10</version>
+                                        <configuration>
+                                                <scanIntervalSeconds>10</scanIntervalSeconds>
+                                                <connectors>
+                                                        <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+                                                                <port>9090</port>
+                                                                <maxIdleTime>60000</maxIdleTime>
+                                                        </connector>
+                                                </connectors>
+                                        </configuration>
+                                </plugin>
 
-			</plugins>
-		</pluginManagement>
-	</build>
+                        </plugins>
+                </pluginManagement>
+        </build>
 
 
-	<dependencies>
-		<dependency>
-			<groupId>at.sti2.ngsee</groupId>
-			<artifactId>invoker-api</artifactId>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>at.sti2.ngsee</groupId>
-			<artifactId>invoker-framework</artifactId>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-rt-frontend-jaxws</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-rt-transports-http</artifactId>
-		</dependency>
-	</dependencies>
+        <dependencies>
+                <dependency>
+                        <groupId>at.sti2.ngsee</groupId>
+                        <artifactId>invoker-api</artifactId>
+                        <scope>compile</scope>
+                </dependency>
+                <dependency>
+                        <groupId>at.sti2.ngsee</groupId>
+                        <artifactId>invoker-framework</artifactId>
+                        <scope>compile</scope>
+                </dependency>
+                <dependency>
+                        <groupId>org.apache.cxf</groupId>
+                        <artifactId>cxf-rt-frontend-jaxws</artifactId>
+                        <exclusions>
+                                <exclusion>
+                                        <groupId>javax.activation</groupId>
+                                        <artifactId>activation</artifactId>
+                                </exclusion>
+                        </exclusions>
+                </dependency>
+                <dependency>
+                        <groupId>org.apache.cxf</groupId>
+                        <artifactId>cxf-rt-transports-http</artifactId>
+                        <exclusions>
+                                <exclusion>
+                                        <groupId>javax.activation</groupId>
+                                        <artifactId>activation</artifactId>
+                                </exclusion>
+                        </exclusions>
+                </dependency>
+        </dependencies>
 
 </project>
