--- a/invoker-project/pom.xml
+++ b/invoker-project/pom.xml
@@ -127,12 +127,6 @@
 							<groupId>org.eclipse.jetty.toolchain</groupId>
 							<artifactId>jetty-enforcer-rules</artifactId>
 							<version>1.0</version>
-							<exclusions>
-								<exclusion>
-									<groupId>javax.activation</groupId>
-									<artifactId>activation</artifactId>
-								</exclusion>
-							</exclusions>
 						</dependency>
 					</dependencies>
 				</plugin>
@@ -144,19 +138,19 @@
 					<configuration>
 						<source>1.6</source>
 						<target>1.6</target>
-						<profile>
+                                                <profile>
 							<activation>
 								<jdk>1.6</jdk>
 							</activation>
-							<dependencies>
+                                                        <dependencies>
 								<dependency>
 									<groupId>javax.activation</groupId>
 									<artifactId>activation</artifactId>
 									<version>1.1</version>
 									<scope>provided</scope>
 								</dependency>
-							</dependencies>
-						</profile>
+                                                        </dependencies>
+                                               </profile>
 					</configuration>
 				</plugin>
 
@@ -225,61 +219,77 @@
 				<groupId>org.apache.cxf</groupId>
 				<artifactId>cxf-rt-frontend-jaxws</artifactId>
 				<version>${cxf.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.cxf</groupId>
-				<artifactId>cxf-rt-transports-http</artifactId>
-				<version>${cxf.version}</version>
-			</dependency>
+                                <exclusions>
+                                        <exclusion>
+                                                <groupId>org.apache.geronimo.specs</groupId>
+                                                <artifactId>geronimo-activation_1.1_spec</artifactId>
+                                        </exclusion>
+                                </exclusions>
+                        </dependency>
+                        <dependency>
+                                <groupId>org.apache.cxf</groupId>
+                                <artifactId>cxf-rt-transports-http</artifactId>
+                                <version>${cxf.version}</version>
+                                <exclusions>
+                                        <exclusion>
+                                                <groupId>org.apache.geronimo.specs</groupId>
+                                                <artifactId>geronimo-activation_1.1_spec</artifactId>
+                                        </exclusion>
+                                </exclusions>
+                        </dependency>
 
-			<!-- XSLT and XQuery processor (needed for XSLT 2.0) -->
-			<dependency>
-				<groupId>net.sf.saxon</groupId>
-				<artifactId>saxon</artifactId>
-				<version>${saxon.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>net.sf.saxon</groupId>
-				<artifactId>saxon-dom</artifactId>
-				<version>${saxon.version}</version>
-			</dependency>
+                        <!-- XSLT and XQuery processor (needed for XSLT 2.0) -->
+                        <dependency>
+                                <groupId>net.sf.saxon</groupId>
+                                <artifactId>saxon</artifactId>
+                                <version>${saxon.version}</version>
+                        </dependency>
+                        <dependency>
+                                <groupId>net.sf.saxon</groupId>
+                                <artifactId>saxon-dom</artifactId>
+                                <version>${saxon.version}</version>
+                        </dependency>
 
-			<!-- tools -->
-			<dependency>
-				<groupId>log4j</groupId>
-				<artifactId>log4j</artifactId>
-				<version>1.2.16</version>
-				<!-- Because the JDK1.6 already includes the Java Activation API, otherwise 
-					this could generate ClassLoading Linkage errors in Servlets -->
-				<exclusions>
-					<exclusion>
-						<groupId>javax.activation</groupId>
-						<artifactId>activation</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.5</version>
-				<scope>test</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-
-
-	<!-- DEPENDENCIES -->
-	<!-- these dependencies are included in every child project per default -->
-	<dependencies>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-		</dependency>
-	</dependencies>
+                        <!-- tools -->
+                        <dependency>
+                                <groupId>log4j</groupId>
+                                <artifactId>log4j</artifactId>
+                                <version>1.2.16</version>
+                                <!--
+                                             Because the JDK1.6 already
+                                             include the Java Activation API,
+                                             otherwise this could generate
+                                             ClassLoading en Linkage errors
+                                             -->
+                                        <exclusions>
+                                                <exclusion>
+                                                        <groupId>javax.activation</groupId>
+                                                        <artifactId>activation</artifactId>
+                                                </exclusion>
+                                        </exclusions>
+                                </dependency>
+                                <dependency>
+                                        <groupId>junit</groupId>
+                                        <artifactId>junit</artifactId>
+                                        <version>4.5</version>
+                                        <scope>test</scope>
+                                </dependency>
+                        </dependencies>
+                </dependencyManagement>
 
 
-</project>
+                <!-- DEPENDENCIES -->
+                <!-- these dependencies are included in every child project per default -->
+                <dependencies>
+                        <dependency>
+                                <groupId>log4j</groupId>
+                                <artifactId>log4j</artifactId>
+                        </dependency>
+                        <dependency>
+                                <groupId>junit</groupId>
+                                <artifactId>junit</artifactId>
+                        </dependency>
+                </dependencies>
+
+
+        </project>
