--- a/invoker-webservice/pom.xml
+++ b/invoker-webservice/pom.xml
@@ -7,36 +7,36 @@
 	<version>${project.parent.version}</version>
 	<packaging>war</packaging>
 
-	<parent>
-		<groupId>at.sti2.ngsee</groupId>
-		<artifactId>invoker-project</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
+        <parent>
+                <groupId>at.sti2.ngsee</groupId>
+                <artifactId>invoker-project</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+        </parent>
 
-	<name>invoker-webservice</name>
-	<url>http://maven.apache.org</url>
+        <name>invoker-webservice</name>
+        <url>http://maven.apache.org</url>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+        <properties>
+                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        </properties>
 
-	<build>
-		<finalName>${project.artifactId}</finalName>
+        <build>
+                <finalName>${project.artifactId}</finalName>
 
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>tomcat-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.cxf</groupId>
-				<artifactId>cxf-java2ws-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
+                <plugins>
+                        <plugin>
+                                <groupId>org.codehaus.mojo</groupId>
+                                <artifactId>tomcat-maven-plugin</artifactId>
+                        </plugin>
+                        <plugin>
+                                <artifactId>maven-assembly-plugin</artifactId>
+                        </plugin>
+                        <plugin>
+                                <groupId>org.apache.cxf</groupId>
+                                <artifactId>cxf-java2ws-plugin</artifactId>
+                        </plugin>
+                        <plugin>
+                                <groupId>org.mortbay.jetty</groupId>
                                 <artifactId>maven-jetty-plugin</artifactId>
                         </plugin>
                 </plugins>
@@ -87,23 +87,23 @@
                                                         <groupId>org.apache.cxf</groupId>
                                                         <artifactId>cxf-rt-frontend-jaxws</artifactId>
                                                         <version>${cxf.version}</version>
-                                                        <exclusions>
-                                                                <exclusion>
-                                                                        <groupId>javax.activation</groupId>
-                                                                        <artifactId>activation</artifactId>
-                                                                </exclusion>
-                                                        </exclusions>
+                                <exclusions>
+                                        <exclusion>
+                                                <groupId>org.apache.geronimo.specs</groupId>
+                                                <artifactId>geronimo-activation_1.1_spec</artifactId>
+                                        </exclusion>
+                                </exclusions>
                                                 </dependency>
                                                 <dependency>
                                                         <groupId>org.apache.cxf</groupId>
                                                         <artifactId>cxf-rt-frontend-simple</artifactId>
                                                         <version>${cxf.version}</version>
-                                                        <exclusions>
-                                                                <exclusion>
-                                                                        <groupId>javax.activation</groupId>
-                                                                        <artifactId>activation</artifactId>
-                                                                </exclusion>
-                                                        </exclusions>
+                                <exclusions>
+                                        <exclusion>
+                                                <groupId>org.apache.geronimo.specs</groupId>
+                                                <artifactId>geronimo-activation_1.1_spec</artifactId>
+                                        </exclusion>
+                                </exclusions>
                                                 </dependency>
                                         </dependencies>
                                         <executions>
@@ -158,22 +158,22 @@
                 <dependency>
                         <groupId>org.apache.cxf</groupId>
                         <artifactId>cxf-rt-frontend-jaxws</artifactId>
-                        <exclusions>
-                                <exclusion>
-                                        <groupId>javax.activation</groupId>
-                                        <artifactId>activation</artifactId>
-                                </exclusion>
-                        </exclusions>
+                                <exclusions>
+                                        <exclusion>
+                                                <groupId>org.apache.geronimo.specs</groupId>
+                                                <artifactId>geronimo-activation_1.1_spec</artifactId>
+                                        </exclusion>
+                                </exclusions>
                 </dependency>
                 <dependency>
                         <groupId>org.apache.cxf</groupId>
                         <artifactId>cxf-rt-transports-http</artifactId>
-                        <exclusions>
-                                <exclusion>
-                                        <groupId>javax.activation</groupId>
-                                        <artifactId>activation</artifactId>
-                                </exclusion>
-                        </exclusions>
+                                <exclusions>
+                                        <exclusion>
+                                                <groupId>org.apache.geronimo.specs</groupId>
+                                                <artifactId>geronimo-activation_1.1_spec</artifactId>
+                                        </exclusion>
+                                </exclusions>
                 </dependency>
         </dependencies>
 
