--- a/invoker-grounding/src/test/resources/log4j.properties
+++ b/invoker-grounding/src/test/resources/log4j.properties
@@ -9,10 +9,10 @@ log4j.appender.C.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-20t %-5p %-25c{1}: 
 
 
 #F is set to be a FileAppender with PatternLayout that logs the full stack traces
-log4j.appender.F=org.apache.log4j.FileAppender
-log4j.appender.F.file=logs/wsmx-federation.log
-log4j.appender.F.layout=org.apache.log4j.PatternLayout
-log4j.appender.F.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-20t %-5p %-25c{1}: %m%n
+#log4j.appender.F=org.apache.log4j.FileAppender
+#log4j.appender.F.file=logs/wsmx-federation.log
+#log4j.appender.F.layout=org.apache.log4j.PatternLayout
+#log4j.appender.F.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-20t %-5p %-25c{1}: %m%n
 
 #Level INFO for DERI code and FATAL for all other code
 log4j.logger.at.sti2.ngsee=DEBUG
