--- a/invoker-api/pom.xml
+++ b/invoker-api/pom.xml
@@ -1,25 +1,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>${project.parent.groupId}</groupId>
-  <artifactId>invoker-api</artifactId>
-  <version>${project.parent.version}</version>
-  <packaging>jar</packaging>
-  
-  <parent>
-  	<groupId>at.sti2.ngsee</groupId>
-  	<artifactId>invoker-project</artifactId>
-  	<version>0.0.1-SNAPSHOT</version>
-  </parent>
+	<groupId>at.sti2.ngsee</groupId>
+	<artifactId>invoker-api</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <name>invoker-api</name>
-  <url>http://maven.apache.org</url>
+	<parent>
+		<groupId>at.sti2.ngsee</groupId>
+		<artifactId>invoker-project</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../invoker-project/pom.xml</relativePath>
+	</parent>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+	<name>invoker-api</name>
+	<url>http://maven.apache.org</url>
 
-  <dependencies>
-  </dependencies>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
+	<dependencies>
+	</dependencies>
 </project>
