--- a/invoker-client/pom.xml
+++ b/invoker-client/pom.xml
@@ -2,15 +2,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>${project.parent.groupId}</groupId>
+	<groupId>at.sti2.ngsee</groupId>
 	<artifactId>invoker-client</artifactId>
-	<version>${project.parent.version}</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>at.sti2.ngsee</groupId>
 		<artifactId>invoker-project</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../invoker-project/pom.xml</relativePath>
 	</parent>
 
 	<name>invoker-client</name>
