--- a/invoker-framework/pom.xml
+++ b/invoker-framework/pom.xml
@@ -2,15 +2,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>${project.parent.groupId}</groupId>
+	<groupId>at.sti2.ngsee</groupId>
 	<artifactId>invoker-framework</artifactId>
-	<version>${project.parent.version}</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>at.sti2.ngsee</groupId>
 		<artifactId>invoker-project</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../invoker-project/pom.xml</relativePath>
 	</parent>
 
 	<name>invoker-framework</name>
@@ -25,32 +26,32 @@
 			<groupId>at.sti2.ngsee</groupId>
 			<artifactId>invoker-api</artifactId>
 			<scope>compile</scope>
-                </dependency>
-                <dependency>
-                        <groupId>org.apache.axis2</groupId>
-                        <artifactId>axis2-kernel</artifactId>
-                        <version>1.5.4</version>
-                        <exclusions>
-                                <exclusion>
-                                        <groupId>org.apache.geronimo.specs</groupId>
-                                        <artifactId>geronimo-activation_1.1_spec</artifactId>
-                                </exclusion>
-                        </exclusions>
-                </dependency>
-                <dependency>
-                        <groupId>org.apache.axis2</groupId>
-                        <artifactId>axis2-transport-local</artifactId>
-                        <version>1.5.4</version>
-                </dependency>
-                <dependency>
-                        <groupId>org.apache.axis2</groupId>
-                        <artifactId>axis2-transport-http</artifactId>
-                        <version>1.5.4</version>
-                </dependency>
-                <dependency>
-                        <groupId>dom4j</groupId>
-                        <artifactId>dom4j</artifactId>
-                        <version>1.6.1</version>
-                </dependency>
-        </dependencies>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-kernel</artifactId>
+			<version>1.5.4</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.geronimo.specs</groupId>
+					<artifactId>geronimo-activation_1.1_spec</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-transport-local</artifactId>
+			<version>1.5.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-transport-http</artifactId>
+			<version>1.5.4</version>
+		</dependency>
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.6.1</version>
+		</dependency>
+	</dependencies>
 </project>
