--- a/invoker-grounding/src/test/resources/log4j.properties
+++ b/invoker-grounding/src/test/resources/log4j.properties
@@ -1,5 +1,5 @@
 #Set root logger level to DEBUG and its appenders to C and F.
-log4j.rootLogger = ERROR, C, F
+log4j.rootLogger = ERROR, C
 
 #C is set to be a ConsoleAppender with CleanPatternLayout that does not display stack traces
 log4j.appender.C=org.apache.log4j.ConsoleAppender
