--- a/invoker-project/pom.xml
+++ b/invoker-project/pom.xml
@@ -14,6 +14,7 @@
 		<module>../invoker-webservice</module>
 		<module>../invoker-grounding</module>
 		<module>../invoker-doc</module>
+                <module>../util-triplestore-client</module>
 	</modules>
 
 	<name>invoker-project</name>
