Renaming invoker-framework to invoker-core. Adding install to script, otherwise compile process breaks the first time.

--- a/invoker-core/pom.xml
+++ b/invoker-core/pom.xml
@@ -14,7 +14,7 @@
 		<relativePath>../invoker-project/pom.xml</relativePath>
 	</parent>
 
-	<name>invoker-framework</name>
+	<name>invoker-core</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
