--- a/invoker-webservice/pom.xml
+++ b/invoker-webservice/pom.xml
@@ -137,11 +137,13 @@
 		<dependency>
 			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>invoker-api</artifactId>
+                        <version>${project.parent.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>invoker-core</artifactId>
+                        <version>${project.parent.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
