--- a/invoker-core/pom.xml
+++ b/invoker-core/pom.xml
@@ -15,33 +15,32 @@
 	</parent>
 
 	<name>invoker-core</name>
-	<url>http://maven.apache.org</url>
+	<url>http://see.sti2.at</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
+		
+		<!-- projects -->
 		<dependency>
-			<groupId>at.sti2.ngsee</groupId>
+			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>invoker-api</artifactId>
-			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>at.sti2.ngsee</groupId>
+			<groupId>${project.parent.groupId}</groupId>
 			<artifactId>invoker-grounding</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>at.sti2.util</groupId>
 			<artifactId>util-triplestore-client</artifactId>
-			<version>0.1-SNAPSHOT</version>
 		</dependency>
+		
+		<!-- axis -->
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2-kernel</artifactId>
-			<version>1.5.4</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.apache.geronimo.specs</groupId>
@@ -52,18 +51,17 @@
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2-transport-local</artifactId>
-			<version>1.5.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2-transport-http</artifactId>
-			<version>1.5.4</version>
 		</dependency>
 		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
-			<version>1.6.1</version>
 		</dependency>
+		
+		<!-- cxf -->
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-frontend-jaxws</artifactId>
