--- a/invoker-doc/pom.xml
+++ b/invoker-doc/pom.xml
@@ -16,7 +16,7 @@
 
 
 	<name>invoker-doc</name>
-	<url>http://maven.apache.org</url>
+	<url>http://see.sti2.at</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
