added wsdl rdf mapping to webservice example

--- a/invoker-dummy-webservice/pom.xml
+++ b/invoker-dummy-webservice/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>at.sti2.ngsee</groupId>
-  <artifactId>invoker-dummy-webservice</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+	<groupId>at.sti2.ngsee</groupId>
+	<artifactId>invoker-dummy-webservice</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>at.sti2.ngsee</groupId>
@@ -57,7 +57,7 @@
 					also be used by the SOAP client. -->
 				<plugin>
 					<artifactId>maven-assembly-plugin</artifactId>
-					<version>2.2-beta-1</version>
+					<version>2.2.1</version>
 					<configuration>
 						<descriptors>
 							<descriptor>src/assembly/jaxws-jar.xml</descriptor>
@@ -131,18 +131,6 @@
 
 
 	<dependencies>
-		<dependency>
-			<groupId>${project.parent.groupId}</groupId>
-			<artifactId>invoker-api</artifactId>
-                        <version>${project.parent.version}</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>${project.parent.groupId}</groupId>
-			<artifactId>invoker-core</artifactId>
-                        <version>${project.parent.version}</version>
-			<scope>compile</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-frontend-jaxws</artifactId>
